# cmake_template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  common.h  main.c
src/add/: CMakeLists.txt  add.c  add.h
src/sub/: CMakeLists.txt  sub.c  sub.h
